--- a/index.html
+++ b/index.html
@@ -3,102 +3,171 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="resource/controllers/style.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <title>Vicente Mariveles - Portfolio</title>
+    <link rel="stylesheet" href="./resources/controllers/style.css">
 
-    <title>Vicente Mariveles's Portfolio</title>
+    <link rel='stylesheet' href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css'>
 </head>
-
 <body>
-    <header>
+    <header class="header">
+        <a href="index.html#home" class="logo"><span>V</span>icente.</a>
+
+        <i class="bx bx-menu" id="menu-icon"></i>
         <nav class="navbar">
-        <!--<a href="Index.html"></a>-->
-        <a href="#" class="logo">Vicente</a>
-            <ul>
-                <li class="active"><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <!-- <li><a href="#blogs">Blogs</a></li> -->
-                <li><a href="#contact">Contact</a></li>
-            </ul> 
-        </nav>    
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#services">Services</a>
+            <a href="#projects">Projects</a>
+            <!-- <a href="#blogs">Blogs</a> -->
+            <a href="#contact">Contact</a>
+        </nav>
+        <a href="#contact" class="gradient-btn">Let's Talk</a>
     </header>
 
-    <section class="home">
-        <div class="home-info">
-            <h1>Vicente Mariveles Jr.</h1>
-            <h3>Your IT Student!</h3>
+    <section class="home" id="home">
+        <div class="home-content">
+            <h1>Hi, It's <span>Vicente Jr.</span></h1>
+            <h3>
+                I'm a <span>Painting Designer</span>
+            </h3>
             <p>I have experience in Java, C# Programming, HTML and CSS Development</p>
-        <div class="btn-sci">
-            <a href="resource/files/mariveles_resume2.pdf" class="btn">Download CV</a>
-            <div class="sci">
+
+            <div class="sci-icons">
                 <a href="https://web.facebook.com/vicente.j.mariveles"><i class='bx bxl-facebook-circle'></i></a>
                 <a href="https://github.com/Vicente0427"><i class='bx bxl-github'></i></a>
                 <a href="https://www.linkedin.com/in/vicente-jr-mariveles-6127ab332/"><i class='bx bxl-linkedin'></i></a>
             </div>
-        </div>
-    </div>
-        <div class="home-img">
-            <div class="img-box">
-                <div class="img-item">
-                    <img src="resource.images.img1.png" alt="Vicente Mariveles Jr.">
-                </div>
+            <div class="btn-group">
+                <a href="./resources/files/mariveles_resume2.pdf" download class="btn">Download CV</a>
+                <a href="#contact" class="btn">Contact</a>
             </div>
+        </div>
+        <div class="home-img">
+            <img src="./resources/images/img23.jpg">
         </div>
     </section>
 
     <section class="about" id="about">
         <div class="about-img">
-            <img src="resource/images/img2.jpg" alt="Vicente Mariveles Jr.">
+            <img src="./resources/images/img23.jpg">
         </div>
-        
         <div class="about-content">
-            <h2 class="heading">About <span>Me</span></h2>
-            <p>Hi everyone, I'm Vicente S. Mariveles Jr. 22 years old from Quezon City. I am the youngest of all family. My life is to fulfill our success in all paths, aspects and all needs to pursuing the goals, hardwork, 
-                dedication and passion by achiving endless boundaries in our journeys.</p>
-            <br> My hobbies are: playing games, reading, writing, editing, organizing, eating</br>
-            <a href="#" class="btn">Read more</a>
-        </div>  
+            <h2>About <span>Me</span></h2>
+            <p>Hi everyone, I'm Vicente S. Mariveles Jr. 22 years old from Quezon City. I am the youngest of all family. 
+                My life is to fulfill our success in all paths, aspects and all needs to pursuing the goals, hardwork, 
+                dedication and passion by achiving endless boundaries in our journeys.
+                <!-- My hobbies are: playing games, reading, writing, editing, organizing, eating. -->
+            </p>
+            <a href="#" class="btn">Read More</a>
+        </div>
     </section>
 
-    <div class = "second-photo">
-        <h2>Educational Attainment</h2>
-        <h3><br>Antonio A. Maceda Integrated School</h3>
-        <h4>Santa Mesa, Manila</h4>
-        <p>Elementary</p>
-        <p>2011-2017</p>
-        <p>High School (Junior to Senior)</p>
-        <p>2017-2022</p>
+    <section class="services" id="services">
 
-        <h3><br>Colegio San Jose de Alaminos</h3>
-        <h4>Alaminos City, Pangasinan</h4>
-        <p>High School(Senior)</p>
-        <p>2022-2023</p>
+        <h2 class="heading">Services</h2>
 
-        <h3><br>STI Alaminos</h3>
-        <h4>Alaminos City, Pangasinan</h4>
-        <p>2023-present</p>
-    </div>
+        <div class="services-container">
+            <div class="service-box">
+                <div class="service-info">
+                    <i class='bx bx-brush'></i>
+                    <h4>Graphic Designer</h4>
+                    <p>I have experience an in Photo/Video Editing like Canva, Adobe Photoshop Editor and Capcut Editor.</p>
+                </div>
+            </div>
+            <div class="service-box">
+                <div class="service-info">
+                    <i class='bx bx-code-alt'></i>
+                    <h4>Programming</h4>
+                    <p>I have experience an in Programming like Java, C#, Python and Mobile and Web Programming.</p>
+                </div>
+            </div>
+            <div class="service-box">
+                <div class="service-info">
+                    <i class='bx bx-link-alt'></i>
+                    <h4>Network Services</h4>
+                    <p>I have experience an in Network like installation / Repairing the cables.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
-    <div class = "third-photo">
-        <h4>Awards and Certifications</h4>
-        <h3>Certificate of Graduation</h3>
-        <p>Colegio San Jose de Alaminos (S.Y 2022-2023)</p>
-    </div>
+    <section class="projects" id="projects">
+        <h2 class="heading">Projects</h2>
 
-    <div class = "contact">
-        <h3 class="section-title">Contact Us</h3>
-            <form action="#" class="contact-form">
-                <input type="text" placeholder="Name: " class="form-input" required>
-                <input type="email" placeholder="Email: " class="form-input" required>
-                <textarea placeholder="Message: " class="form-input" required></textarea>
-                <button class="submit-button">Submit</button>
-            </form>
-    </div>
+        <div class="projects-box">
+            <div class="project-card">
+                <img src="./resources/images/462577457_2365733173759621_4184973624106369628_n.png" alt="">
+                <h3>CommUnity Hub</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
+                <div class="btn">Review Project</div>
+            </div>
 
-    <div class = "copyright">
-        <h3>©</h3>
-    </div>
-    
-</body>
+            <div class="project-card">
+                <img src="" alt="">
+                <h3>PopSIKO</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
+                <div class="btn">Review Project</div>
+            </div>
+        </div>
+    </section>
+
+    <section class="contact" id="contact">
+        <h2 class="heading">Contact <span>Me</span></h2></span></h2>
+        <form action="#">
+            <div class="input-group">
+                <div class="input-box">
+                    <input type="text" placeholder="Full Name">
+                    <input type="email" placeholder="Email">
+                </div>
+
+                <div class="input-box">
+                    <input type="number" placeholder="Phone Number">
+                    <input type="text" placeholder="Subject">
+                </div>
+            </div>
+
+            <div class="input-group-2">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+                <input type="submit" value="Send Message" class="btn">
+            </div>
+
+        </form>
+    </section>
+
+    <footer class="footer">
+        <div class="sci-icons">
+                <a href="https://web.facebook.com/vicente.j.mariveles"><i class='bx bxl-facebook-circle'></i></a>
+                <a href="https://github.com/Vicente0427"><i class='bx bxl-github'></i></a>
+                <a href="https://www.linkedin.com/in/vicente-jr-mariveles-6127ab332/"><i class='bx bxl-linkedin'></i></a>
+        </div>
+
+        <ul class="list">
+            <li>
+                <a href="#">FAQ</a>
+            </li>
+
+            <li>
+                <a href="#services">Services</a>
+            </li>
+
+            <li>
+                <a href="#about">About Me</a>
+            </li>
+
+            <li>
+                <a href="#projects">Projects</a>
+            </li>
+
+            <li>
+                <a href="#contact">Contact</a>
+            </li>
+        </ul>
+
+        <p class="copyright">
+            ©Copyright 2025 | Vicente Mariveles Jr. 
+        </p>
+    </footer>
+
+    <script src="./resources/controllers/script.js"></script>
+    </body>
 </html>
