--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vicente Mariveles - Portfolio</title>
-    <link rel="stylesheet" href="./resources/controllers/style.css">
+    <link rel="stylesheet" href="./resource/controllers/style.css">
 
     <link rel='stylesheet' href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css'>
 </head>
@@ -38,18 +38,18 @@
                 <a href="https://www.linkedin.com/in/vicente-jr-mariveles-6127ab332/"><i class='bx bxl-linkedin'></i></a>
             </div>
             <div class="btn-group">
-                <a href="./resources/files/mariveles_resume2.pdf" download class="btn">Download CV</a>
+                <a href="./resource/files/mariveles_resume2.pdf" download class="btn">Download CV</a>
                 <a href="#contact" class="btn">Contact</a>
             </div>
         </div>
         <div class="home-img">
-            <img src="./resources/images/img23.jpg">
+            <img src="./resource/images/img23.jpg">
         </div>
     </section>
 
     <section class="about" id="about">
         <div class="about-img">
-            <img src="./resources/images/img23.jpg">
+            <img src="./resource/images/img23.jpg">
         </div>
         <div class="about-content">
             <h2>About <span>Me</span></h2>
@@ -96,7 +96,7 @@
 
         <div class="projects-box">
             <div class="project-card">
-                <img src="./resources/images/462577457_2365733173759621_4184973624106369628_n.png" alt="">
+                <img src="./resource/images/462577457_2365733173759621_4184973624106369628_n.png" alt="">
                 <h3>CommUnity Hub</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
                 <div class="btn">Review Project</div>
@@ -168,6 +168,6 @@
         </p>
     </footer>
 
-    <script src="./resources/controllers/script.js"></script>
+    <script src="./resource/controllers/script.js"></script>
     </body>
 </html>
