Updating the images to the HTML on my portfolio

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
             </div>
         </div>
         <div class="home-img">
-            <img src="./resource/images/img23.jpg">
+            <img src="./resource/images/img23.JPG">
         </div>
     </section>
 
     <section class="about" id="about">
         <div class="about-img">
-            <img src="./resource/images/img23.jpg">
+            <img src="./resource/images/img23.JPG">
         </div>
         <div class="about-content">
             <h2>About <span>Me</span></h2>
